--- a/lab8/GumballMachine/GumballMachine.vcxproj
+++ b/lab8/GumballMachine/GumballMachine.vcxproj
@@ -143,7 +143,14 @@
   <ItemGroup>
     <ClInclude Include="GumballMachine.h" />
     <ClInclude Include="IGumballMachine.h" />
+    <ClInclude Include="IMultiGumballMachine.h" />
+    <ClInclude Include="MultiGumballMachine.h" />
+    <ClInclude Include="MultiState\MultiHasQuarterState.h" />
+    <ClInclude Include="MultiState\MultiNoQuarterState.h" />
+    <ClInclude Include="MultiState\MultiSoldOutState.h" />
+    <ClInclude Include="MultiState\MultiSoldState.h" />
     <ClInclude Include="Naive\NaiveGumballMachine.h" />
+    <ClInclude Include="Naive\NaiveMultiGumballMachine.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="State\HasQuarterState.h" />
     <ClInclude Include="State\IState.h" />
@@ -152,6 +159,22 @@
     <ClInclude Include="State\SoldState.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="MultiState\MultiHasQuarterState.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="MultiState\MultiNoQuarterState.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="MultiState\MultiSoldOutState.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="MultiState\MultiSoldState.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
