[lab8] add simple menu

--- a/lab8/GumballMachine/GumballMachine.vcxproj
+++ b/lab8/GumballMachine/GumballMachine.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="IGumballMachine.h" />
     <ClInclude Include="IMultiGumballMachine.h" />
     <ClInclude Include="IMultiGumballMachineRefillable.h" />
+    <ClInclude Include="Menu\MenuFP.h" />
     <ClInclude Include="MultiGumballMachine.h" />
     <ClInclude Include="MultiGumballMachineRefillable.h" />
     <ClInclude Include="MultiRefillableState\IStateRefillable.h" />
