--- a/lab8/GumballMachine/GumballMachine.vcxproj.filters
+++ b/lab8/GumballMachine/GumballMachine.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="IMultiGumballMachineRefillable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Menu\MenuFP.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
