--- a/lab9/ShapesEditor/ShapesEditor.vcxproj
+++ b/lab9/ShapesEditor/ShapesEditor.vcxproj
@@ -140,6 +140,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="App\PictureDraftAppModel\PictureDraftAppModel.h" />
+    <ClInclude Include="App\ShapeAppModel\ShapeAppModel.h" />
+    <ClInclude Include="App\ShapeSelectionModel\ShapeSelectionModel.h" />
     <ClInclude Include="common\Color\Color.h" />
     <ClInclude Include="common\ShapeType\ShapeType.h" />
     <ClInclude Include="Model\PictureDraft\PictureDraft.h" />
@@ -153,6 +156,15 @@
     <ClInclude Include="Model\Style\LineStyle\LineStyle.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="App\PictureDraftAppModel\PictureDraftAppModel.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="App\ShapeAppModel\ShapeAppModel.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="App\ShapeSelectionModel\ShapeSelectionModel.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
     <ClCompile Include="Model\PictureDraft\PictureDraft.cpp">
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../pch.h</PrecompiledHeaderFile>
     </ClCompile>
