--- a/lab9/ShapesEditor/ShapesEditor.vcxproj
+++ b/lab9/ShapesEditor/ShapesEditor.vcxproj
@@ -144,10 +144,12 @@
     <ClInclude Include="App\Command\AbstractCommand.h" />
     <ClInclude Include="App\Command\ICommand.h" />
     <ClInclude Include="App\Command\MacroCommand\MacroCommand.h" />
-    <ClInclude Include="App\History\History.h" />
+    <ClInclude Include="App\History\CommandsHistory.h" />
+    <ClInclude Include="App\History\ICommandsContainer.h" />
     <ClInclude Include="App\History\IHistory.h" />
     <ClInclude Include="App\PictureDraftAppModel\PictureDraftAppModel.h" />
     <ClInclude Include="App\ShapeAppModel\ShapeAppModel.h" />
+    <ClInclude Include="App\ShapeSelectionModel\IShapeSelectionModel.h" />
     <ClInclude Include="App\ShapeSelectionModel\ShapeSelectionModel.h" />
     <ClInclude Include="App\UseCases\Commands\ChangeFrameCommand\ChangeFrameCommand.h" />
     <ClInclude Include="App\UseCases\Commands\DeleteShapeCommand\DeleteShapeCommand.h" />
@@ -157,9 +159,12 @@
     <ClInclude Include="App\UseCases\MoveShapeUseCase\MoveShapeUseCase.h" />
     <ClInclude Include="App\UseCases\ResizeShapeUseCase\BasePoint\BasePoint.h" />
     <ClInclude Include="App\UseCases\ResizeShapeUseCase\ResizeShapeUseCase.h" />
+    <ClInclude Include="App\UseCases\UseCaseFactory\IUseCaseFactory.h" />
+    <ClInclude Include="App\UseCases\UseCaseFactory\UseCaseFactory.h" />
     <ClInclude Include="common\Color\Color.h" />
     <ClInclude Include="common\Point\Point.h" />
     <ClInclude Include="common\ShapeType\ShapeType.h" />
+    <ClInclude Include="Model\PictureDraft\IPictureDraft.h" />
     <ClInclude Include="Model\PictureDraft\PictureDraft.h" />
     <ClInclude Include="common\Frame\Frame.h" />
     <ClInclude Include="Model\Shape\Shape.h" />
@@ -194,7 +199,7 @@
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../../pch.h</PrecompiledHeaderFile>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../../../pch.h</PrecompiledHeaderFile>
     </ClCompile>
-    <ClCompile Include="App\History\History.cpp">
+    <ClCompile Include="App\History\CommandsHistory.cpp">
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../pch.h</PrecompiledHeaderFile>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../../pch.h</PrecompiledHeaderFile>
     </ClCompile>
@@ -237,6 +242,10 @@
     <ClCompile Include="App\UseCases\ResizeShapeUseCase\ResizeShapeUseCase.cpp">
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../../pch.h</PrecompiledHeaderFile>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../../../pch.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="App\UseCases\UseCaseFactory\UseCaseFactory.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../../../pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../../pch.h</PrecompiledHeaderFile>
     </ClCompile>
     <ClCompile Include="Model\PictureDraft\PictureDraft.cpp">
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">../../pch.h</PrecompiledHeaderFile>
